# socketcpp

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: calc.cpp  calc.hpp  cmake_variables.hpp.in  main.cpp
